# CineBase

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  env.example  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_migration_sqlite.py
app/: main.py
app/api/: router.py
app/api/v1/: cache.py  health.py
app/core/: config.py  logging.py
app/db/: base.py  session.py
app/models/: __init__.py  movie.py  user.py
docker/: init-db.sql
docs/: api-reference.md  deployment.md  development.md
